# elementMass

./: LICENSE  README.rst  pyproject.toml  requirements.txt
docs/source/: about.rst  changelog.rst  code_documentation.rst  conf.py  getting_started.rst  index.rst
docs/source/notebooks/: usage.ipynb
elementMass/: elements.py
elementMass/data/: periodic_table.parquet
elements/: Periodic_table.py  elements.py
