[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elements"
version = "1.0.0"
authors = [{ name = "Thomas van Gerve" }]
description = ""
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pandas", "pyarrow"]

[project.urls]
Homepage = "https://github.com/TDGerve/elements"

[tool.setuptools.packages.find]
where = ["elements"]

[tool.setuptools.package-data]
"data" = ["*.parquet"]
